--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<c3p0.version>0.9.1.2</c3p0.version>
 		<mysql.version>5.1.38</mysql.version>
 		<jackson.version>2.7.3</jackson.version>
+		<hibernate-validator.version>5.3.0.Alpha1</hibernate-validator.version>
 		<commons-lang.version>3.4</commons-lang.version>
         <commons-collections.version>4.0</commons-collections.version>
 		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
@@ -143,6 +144,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>${commons-collections.version}</version>
+        </dependency>
+        
+        <!-- Hibernate Validator -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 		
 		<!-- Mysql driver -->
