add some services

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/gooooo58
+jdbc.url=jdbc:mysql://localhost:3306/gooooo5
 jdbc.username=root
-jdbc.password=hlhj@#AS98z
+jdbc.password=root
